# repo_service

./: .gitignore  README.md  pyproject.toml
brief/: develop.md
docker/: config.xml  docker-compose.yaml
src/: configs.py  main.py
src/core/: depends.py
src/database/: connections.py  repositories.py
src/endpoints/add_event/: depends.py  handler.py  models.py
src/endpoints/add_event/use_cases/: for_click.py  for_mongo.py
src/endpoints/delete_event/: depends.py  handler.py  models.py
src/endpoints/delete_event/use_cases/: for_click.py  for_mongo.py
src/endpoints/get_event/: handler.py  models.py  use_case.py
src/endpoints/get_events/: depends.py  handler.py  models.py
src/endpoints/get_events/use_cases/: for_click.py  for_mongo.py
src/endpoints/update_event/: depends.py  handler.py  models.py
src/endpoints/update_event/use_cases/: for_click.py  for_mongo.py
