[tool.poetry]
name = "music-events"
version = "0.1.0"
description = ""
authors = ["Eldar Idiyatullin <eldar_i@maximail.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.4"
pydantic-settings = "^2.3.4"
uvicorn = "^0.32.0"
aiomysql = "^0.2.0"
clickhouse-driver = "^0.2.9"
faststream = {extras = ["rabbit"], version = "^0.5.39"}
motor = "^3.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
isort = "^5.13.2"
flake8 = "^7.1.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_functions = "test_*"

[tool.isort]
py_version = 311
line_length = 88
profile = "black"
multi_line_output = 3
include_trailing_comma = true
color_output = true
use_parentheses = true
atomic = true
combine_as_imports = true
combine_star = true
group_by_package = true
honor_noqa = true
remove_redundant_aliases = true
indent = '    '
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
